[package]
categories = ["url", "serialization", "request", "querystring"]
description = "Make building URLs more ergonomic."
edition = "2021"
homepage = "https://github.com/alextes/format-url"
license = "MIT"
name = "format-url"
version = "0.3.0"

[dependencies]
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
